--- a/questionnaire/CodeCoverageForm.YAML
+++ b/questionnaire/CodeCoverageForm.YAML
@@ -14,4 +14,4 @@ form:
       label: What percentage of your codebase is covered by static analysis?
       type: number
       dependencies:
-        country: Yes
+        ease-q1: Yes
