--- a/test.yaml
+++ b/test.yaml
@@ -1,13 +1,8 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: Organization
 metadata:
-  name: baseline
-  description: An example of a Backstage application.
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  name: Org1
+  description: org 1 description
 spec:
-  type: website
-  owner: john@example.com
-  lifecycle: experimental
+  type: product
+  owner: product 1
