--- a/test1.yaml
+++ b/test1.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: baseline
+  name: test1
   description: An example of a Backstage application.
   # Example for optional annotations
   # annotations:
@@ -9,5 +9,5 @@ metadata:
   #   backstage.io/techdocs-ref: dir:.
 spec:
   type: website
-  owner: john@example.com
+  owner: johaaaaa@example.com
   lifecycle: experimental
